--- a/src/os2datascanner/projects/static/scss/components/_options.scss
+++ b/src/os2datascanner/projects/static/scss/components/_options.scss
@@ -59,6 +59,11 @@ label+.dropdown {
   display: none;
   position: absolute;
   top: 1rem;
+  z-index: 100;
+
+  // Apply this to make z-index work on iPad OS
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
 
   &:hover {
     display: block;
@@ -74,10 +79,6 @@ label+.dropdown {
   border-radius: var(--border-radius-default);
   background-color: var(--color-widget-bg);
   box-shadow: var(--box-shadow-widget);
-
-  // Apply this to make z-index work on iPad OS
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
 
   @media (min-width: $break-lg) {
     top: 1.5rem;
